--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University website tutorials</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"
+      integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <section class="header">
       <nav>
         <a href="index.html"><img src="image/logo.png" alt="" /></a>
-        <div class="nav-links">
+        <div class="nav-links" id="navlinks">
+          <i class="fa fa-times" onclick="hidemenu()"></i>
           <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
@@ -19,6 +26,7 @@
             <li><a href="">CONTACT</a></li>
           </ul>
         </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
       </nav>
       <div class="text-box">
         <h1>World's Biggest University</h1>
@@ -27,8 +35,19 @@
           need to learn HTML, CSS, <br />
           Javascript and you are good to go
         </p>
-        <a href="">visit Us TO Know More</a>
+        <a href="" class="hero-btn">visit us to know more</a>
       </div>
     </section>
+
+    <!-- javascript for toggle menu for mobile  -->
+    <script>
+      var navlinks = document.getElementById("navlinks");
+      function showmenu() {
+        navlinks.style.right = "0";
+      }
+      function hidemenu() {
+        navlinks.style.right = "-200px";
+      }
+    </script>
   </body>
 </html>
