--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University website tutorials</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"
-      integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK"
-      crossorigin="anonymous"
-    />
+    <script src="https://kit.fontawesome.com/b45544067d.js" crossorigin="anonymous"></script>
+   
   </head>
   <body>
     <section class="header">
@@ -38,6 +34,169 @@
         <a href="" class="hero-btn">visit us to know more</a>
       </div>
     </section>
+    <!-- course -->
+    <section class="course">
+      <h1>Courses We Offer</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui alias,
+        rerum nisi quisquam delectus quis architecto laboriosam nam, aliquid
+        culpa cumque ea quaerat distinctio commodi quam incidunt natus, ullam
+        odio.
+      </p>
+      <div class="row">
+        <div class="course-col">
+          <h3>Intermediate</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+            nostrum provident eaque quisquam quod fuga rem dolorem quibusdam,
+            itaque modi voluptates animi incidunt nesciunt obcaecati molestias
+            aperiam harum odit quam!
+          </p>
+        </div>
+        <div class="course-col">
+          <h3>Degree</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+            nostrum provident eaque quisquam quod fuga rem dolorem quibusdam,
+            itaque modi voluptates animi incidunt nesciunt obcaecati molestias
+            aperiam harum odit quam!
+          </p>
+        </div>
+        <div class="course-col">
+          <h3>Post Gradution</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+            nostrum provident eaque quisquam quod fuga rem dolorem quibusdam,
+            itaque modi voluptates animi incidunt nesciunt obcaecati molestias
+            aperiam harum odit quam!
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- campus -->
+
+    <section class="campus">
+      <h1>Our Global Campus</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero corporis
+        voluptas sint inventore nobis temporibus esse eligendi magnam incidunt
+        fugiat.
+        <div class="row">
+          <div class="campus-col">
+            <img src="image/london.png" alt="">
+            <div class="layer">
+              <h3>
+                LONDON
+              </h3>
+            </div>
+          </div>
+          <div class="campus-col">
+            <img src="image/newyork.png" alt="">
+            <div class="layer">
+              <h3>
+                NEW YORK
+              </h3>
+            </div>
+          </div>
+          <div class="campus-col">
+            <img src="image/washington.png" alt="">
+            <div class="layer">
+              <h3>
+                WASHINGTON
+              </h3>
+            </div>
+          </div>
+        </div>
+      </p>
+    </section>
+
+    <!-- facilities-->
+     <section class="facilities">
+      <h1>Our Facilities</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, labore optio inventore porro iusto harum.</p>
+       
+      <div class="row">
+
+        <div class="facilities-col">
+          <img src="image/library.png" alt="">
+          <h3>World Class Library </h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, doloribus!</p>
+        </div>
+        <div class="facilities-col">
+          <img src="image/basketball.png" alt="">
+          <h3>Largest Play Ground </h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, doloribus!</p>
+        </div>
+        <div class="facilities-col">
+          <img src="image/cafeteria.png" alt="">
+          <h3>Tasty and Health Food </h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, doloribus!</p>
+        </div>
+      </div>
+
+     </section>
+
+
+<!-- testimonials -->
+ <section class="testimonials">
+  <h1>What Our Student Says</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, labore optio inventore porro iusto harum.</p>
+ <div class="row">
+  <div class="testimonials-cal">
+    <img src="image/user1.jpg" alt="">
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat expedita consectetur veniam ipsum quia necessitatibus hic, quo iusto quidem illo debitis corporis, tenetur minima adipisci. Cupiditate culpa rerum impedit recusandae?
+      </p>
+      <h3>Christine Berkley</h3>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+    </div>
+  </div>
+  <div class="testimonials-cal">
+    <img src="image/user2.jpg" alt="">
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat expedita consectetur veniam ipsum quia necessitatibus hic, quo iusto quidem illo debitis corporis, tenetur minima adipisci. Cupiditate culpa rerum impedit recusandae?
+      </p>
+      <h3>David Dyer</h3>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half"></i>
+    </div>
+  </div>
+ </div>
+    </section>
+    <!-- call to action -->
+     <section class="cta">
+      <h1>
+        Enroll For Our Various Online Courses <br>Anywhere From The World
+      </h1>
+      <a href="" class="hero-btn">CONTACT US</a>
+     </section>
+
+
+<!-- Footer -->
+ <section class="Footer">
+  <h4>About Us</h4>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Amet eum officia unde qui autem a ipsa quam rerum ex nobis cumque <br>laborum repellendus commodi quidem sapiente enim sed, magnam voluptatibus.</p>
+ <div class="icons">
+  <i class="fa-brands fa-facebook"></i>
+  <i class="fa-brands fa-twitter"></i>
+  <i class="fa-brands fa-instagram"></i>
+  <i class="fa-brands fa-linkedin"></i>
+ </div>
+ <p>Made with <i class="fa-solid fa-heart"></i> By Muiz learning</p>
+</section>
+ 
+
+
 
     <!-- javascript for toggle menu for mobile  -->
     <script>
