--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <i class="fa-brands fa-instagram"></i>
   <i class="fa-brands fa-linkedin"></i>
  </div>
- <p>Made with <i class="fa-solid fa-heart"></i> By Muiz learning</p>
+ <p>Made with <i class="fa-solid fa-heart"></i> By MuizKhalifa</p>
 </section>
  
 
