--- a/Blog.html
+++ b/Blog.html
@@ -26,80 +26,69 @@
         </div>
         <i class="fa fa-bars" onclick="showmenu()"></i>
       </nav>
-      <h1>Our Courses</h1>
-    </section>
-    <!-- course -->
-    <section class="course">
-      <h1>Courses We Offer</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui alias,
-        rerum nisi quisquam delectus quis architecto laboriosam nam, aliquid
-        culpa cumque ea quaerat distinctio commodi quam incidunt natus, ullam
-        odio.
-      </p>
-      <div class="row">
-        <div class="course-col">
-          <h3>Intermediate</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
-            nostrum provident eaque quisquam quod fuga rem dolorem quibusdam,
-            itaque modi voluptates animi incidunt nesciunt obcaecati molestias
-            aperiam harum odit quam!
-          </p>
-        </div>
-        <div class="course-col">
-          <h3>Degree</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
-            nostrum provident eaque quisquam quod fuga rem dolorem quibusdam,
-            itaque modi voluptates animi incidunt nesciunt obcaecati molestias
-            aperiam harum odit quam!
-          </p>
-        </div>
-        <div class="course-col">
-          <h3>Post Gradution</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
-            nostrum provident eaque quisquam quod fuga rem dolorem quibusdam,
-            itaque modi voluptates animi incidunt nesciunt obcaecati molestias
-            aperiam harum odit quam!
-          </p>
-        </div>
-      </div>
+      <h1>Our Certificate & Online Programs For 2024</h1>
     </section>
 
-    <!-- facilities -->
-    <section class="facilities">
-      <h1>Our Facilities</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio,
-        labore optio inventore porro iusto harum.
-      </p>
+    <!-- blog page content -->
 
+    <section class="blog-content">
       <div class="row">
-        <div class="facilities-col">
-          <img src="image/library.png" alt="" />
-          <h3>World Class Library</h3>
+        <div class="blog-left">
+          <img src="image/certificate.jpg" alt="" />
+          <h2>Our Certificate & Online Programs For 2024</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
-            doloribus!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
+            deserunt cumque nesciunt autem. Vero debitis dicta est doloremque
+            amet iure natus sed at itaque magni dolore culpa cum, a recusandae
+            nisi sequi iste, distinctio pariatur maiores qui sapiente iusto
+            tempora rerum. Magni laboriosam quisquam tempora veniam natus
+            tenetur velit officiis.
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente laudantium exercitationem sit repellat voluptatibus. Quaerat quam animi sequi nobis ex tempore quis odit perspiciatis doloribus qui laboriosam sit atque ducimus sapiente voluptas, praesentium assumenda officiis iusto unde inventore alias, nostrum expedita placeat. Facilis numquam reiciendis necessitatibus. Natus dolorem saepe accusamus recusandae cumque expedita aspernatur non magnam laboriosam modi? Soluta laudantium ea expedita aliquam aliquid cum accusantium tempore distinctio sunt, quis magni earum sequi provident vero quasi est facilis nihil explicabo</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, sunt ex distinctio delectus fugiat quia blanditiis tempora possimus optio error rem eaque, corrupti accusamus sapiente similique obcaecati dignissimos, odio aut saepe quas repellat mollitia dolore cumque. Itaque libero nesciunt quae ipsum possimus facilis, voluptates aut necessitatibus excepturi natus, molestias nobis!</p>
           </p>
+          <br>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint sapiente at quam optio tempore esse est voluptatem cumque veritatis ducimus quaerat excepturi fugit dolore consequuntur officia quae, aperiam dicta.
+          </p>
+          <div class="comment-box">
+            <h3>Leave a comment</h3>
+            <form class="comment-form">
+              <input type="text" placeholder="Enter Name">
+              <input type="email" placeholder="Enter email">
+              <textarea rows="5" placeholder="Your comment"></textarea>
+              <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+
+            </form>
+          </div>
         </div>
-        <div class="facilities-col">
-          <img src="image/basketball.png" alt="" />
-          <h3>Largest Play Ground</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
-            doloribus!
-          </p>
-        </div>
-        <div class="facilities-col">
-          <img src="image/cafeteria.png" alt="" />
-          <h3>Tasty and Health Food</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
-            doloribus!
-          </p>
+        <div class="blog-right">
+          <h3>Post Categories</h3>
+          <div>
+            <span>Business Analytics</span>
+            <span>24</span>
+          </div>
+          <div>
+            <span>Interaction Design</span>
+            <span>21</span>
+          </div>
+          <div>
+            <span>Machine Learning</span>
+            <span>18</span>
+          </div>
+          <div>
+            <span>Computer Science</span>
+            <span>27</span>
+          </div>
+          <div>
+            <span>Auto card</span>
+            <span>56</span>
+          </div>
+          <div>
+            <span>information security</span>
+            <span>30</span>
+          </div>
         </div>
       </div>
     </section>
